--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="main-box">
       <div class="container">
         <h2>The art is here</h2>
+        <p>The passion</p>
       </div>
     </div>
   </body>
